--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - 2.2.3
 
 dist: trusty
-sudo: required
+sudo: false
 
 os:
   - linux
@@ -23,7 +23,7 @@ before_install:
     - gem install bundler
     - sudo apt-get update
     - sudo apt-get install software-properties-common -y
-    - sudo apt-get install youtube-dl ffmpeg
+    - sudo apt-get install youtube-dl avconf
 
 after_success:
     - CI=true TRAVIS=true coveralls --verbose
