--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
     - gem install bundler
     - sudo apt-get update
     - sudo apt-get install software-properties-common -y
-    - sudo apt-get install youtube-dl avconf
+    - sudo apt-get install youtube-dl avconv
 
 after_success:
     - CI=true TRAVIS=true coveralls --verbose
