Changed configure: Downgraded GETTEXT.

--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,8 @@ dnl ***********************************************************************
 GETTEXT_PACKAGE=youtube-dlhelper
 AC_SUBST([GETTEXT_PACKAGE])
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [GETTEXT package name])
-AM_GNU_GETTEXT_VERSION([0.19.7])
+#AM_GNU_GETTEXT_VERSION([0.19.7])
+AM_GNU_GETTEXT_VERSION([0.18.3])
 AM_GNU_GETTEXT([external])
 
 
