--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
     - gem install bundler --pre
     - sudo apt-get update
     - sudo apt-get install software-properties-common -y
-    - sudo apt-get install youtube-dl libav-tools libavcodec-extra autoconf -y
+    - sudo apt-get install libav-tools libavcodec-extra autoconf -y
     - sudo apt-get install xsltproc docbook-xsl docbook-xml -y
     - ./autogen.sh && make
 
