--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,22 @@
 language: ruby
 rvm:
   - 2.2.0
-  - 2.2.1
-  - 2.2.2
-  - 2.2.3
+  - 2.3.0
+  - 2.4.0
+  - 2.4.1
+  - ruby-head # MRI head
+  - jruby # JRuby RVM default
+  - jruby-9.1.12.0 # JRuby 9k series
+  - jruby-head # JRuby Head
+  - rbx-2 # Rubinius stable
+
+cache: bundler
+
+matrix:
+  allow_failures:
+  - rvm: jruby
+  - rvm: jruby-head
+  - rvm: ruby-head
 
 dist: trusty
 sudo: false
@@ -24,6 +37,8 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install software-properties-common -y
     - sudo apt-get install libav-tools libavcodec-extra autoconf -y
+    - bundle install
+    - sudo chmod 755 ~/.rvm/gems/*/gems/youtube-dl.rb/vendor/bin/youtube-dl
 
 after_success:
     - CI=true TRAVIS=true coveralls --verbose
