Next try for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install software-properties-common -y
     - sudo apt-get install libav-tools libavcodec-extra autoconf -y
+    - sudo chmod 755 ~/build/saigkill/youtube_dlhelper/vendor/bundle/ruby/*/bundler/gems/youtube-dl.rb-*/vendor/bin/youtube-dl
 
 after_success:
     - CI=true TRAVIS=true coveralls --verbose
