--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
     - tar xvfJ ffmpeg-git-64bit-static.tar.xz
     - popd
     - bundle install
-    #- sudo chmod 755 ~/.rvm/gems/*/gems/youtube-dl.rb/vendor/bin/youtube-dl
+    - chmod 755 ~/build/saigkill/youtube_dlhelper/vendor/bundle/ruby/*/bundler/gems/youtube-dl.rb-*/vendor/bin/youtube-dl
 
 after_success:
     - CI=true TRAVIS=true coveralls --verbose
