Travis: Cleanup remote home/bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ before_install:
     - pushd ~/bin
     - wget https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-64bit-static.tar.xz
     - tar xvfJ ffmpeg-git-64bit-static.tar.xz
+    - cp ffmpeg-git-*-64bit-static/* .
+    - rm -rf ffmpeg-git-*-64bit-static
     - popd
     - bundle install
     - chmod 755 ~/build/saigkill/youtube_dlhelper/vendor/bundle/ruby/*/bundler/gems/youtube-dl.rb-*/vendor/bin/youtube-dl
